--- a/package.json
+++ b/package.json
@@ -8,7 +8,12 @@
     "start": "next start"
   },
   "dependencies": {
+    "@chakra-ui/react": "^1.1.4",
+    "@emotion/react": "^11.1.4",
+    "@emotion/styled": "^11.0.0",
+    "@types/lodash": "^4.14.167",
     "firebase": "^8.2.2",
+    "framer-motion": "^3.2.1",
     "next": "10.0.0",
     "react": "17.0.1",
     "react-dom": "17.0.1"
